# bus-service

./: .gitignore  1requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: gh-pages.yml
bus_service/: BusApi.py  BusSite.py  BusTrafficService.py  bus.service  bus_api.service  bus_telegram_bot.py  bus_telegram_bot.service  robots.txt  schedule.py  sitemap.xml
bus_service/templates/: index.html  telegram.html
docs/: CNAME  api.html  contacts.html  index.html  robots.txt  sitemap.xml  viber.html
site/: about.html  cn.html  index.html
