[tool.poetry]
name = "bus-service"
version = "0.1.0"
description = ""
authors = ["Halimon-Alexandr <154706310+Halimon-Alexandr@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
pytz = "^2024.1"
flask = "^3.1.0"
pytelegrambotapi = "^4.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
